--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,145 @@
 
+/* fonts  */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+
+/* common styles  */
+body{
+    font-family: 'Poppins', sans-serif;
+    background-color: #F3F1FF;
+}
+
+.container{
+    background-color: #ffffff;
+    width: 870px;
+    padding: 30px;
+    border-radius: 10px;
+    margin-top: 21px;
+}
+hr{
+    border: 1px solid #D1D1D1;
+    margin-bottom: 27px;
+}
+/* header part  */
+nav a{
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+    margin-right: 10px;
+}
+
+/* Top Players Styles  */
+.top-players{
+    margin-bottom: 30px;
+}
+.section-title{
+   color: #562EFF;
+   font-size: 24px;
+   margin-top: 3px;
+    
+}
+.players{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-row-gap:30px;
+}
+.player{
+    display: flex;
+    align-items: center;
+}
+.player img{
+    height: 56px;
+    width: 56px;
+}
+.player-name{
+    margin: 16px;
+    font-size: 18px;
+}
+
+/* Top Blogs Styles  */
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap:26px;
+}
+.blog{
+    display:flex;
+}
+.blog .thumbnail img{
+    height: 177px;
+    width: 177px;
+}
+.blog-info{
+    margin-left: 16px;
+}
+.blog-title{
+    font-size: 20px;
+}
+.blog-author{
+    color: #9F9F9F;
+    font: 16px;
+}
+.blog-author a{
+    text-decoration: none;
+    font-size: 16px;
+    color: #562EFF;
+}
+.container:hover{
+    border: 2px solid #D1D1D1;
+}
+
+/* --------------
+Courses Style 
+----------------- */
+.courses{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap:24px;
+    /* box-shadow: 10px 10px 30px solid red; */
+}
+.course{
+    padding: 20px;
+    box-shadow: 0px 0px 10px  gray;
+    border-radius: 5px;
+}
+.course .course-banner img{
+    height: 104px;
+    width: 224px;
+}
+.course-info{
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.fa-star{
+    font-size:12px;
+}
+.fa-star.filled{
+    color: 
+    #FFC014;
+}
+.fa-star.empty{
+    color: 
+    #AEAEAE;
+}
+/* Media Queries  */
+@media only screen and (max-width:688px) {
+    .container{
+        width: 100%;
+    }
+    .players, .blogs, .courses{
+       
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .player, .blog , .blog{
+        flex-direction: column;
+    }
+}
+/* Tablet Devices  */
+
+@media only screen and (min-width:688px) and(max-width:992px) {
+    .players{
+        background-color: rgb(247, 83, 7);
+    }
+    
+}
+
